tg-5953 [FE] Refactor en editar profesiones en base al CR

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/component/card-professions/card-professions.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/component/card-professions/card-professions.component.scss
@@ -3,19 +3,13 @@
 	margin: 0.94em 0 0 0.94em;
 }
 
-.font {
-	display: block;
-	font-size: 1em;
+.sub-title {
+	margin: 0.94em 0 0 0;
 }
 
 .data {
 	margin: 0 0 0.44em 0;
 }
-
-.sub-title {
-	margin: 0 0 0 0.94em;
-}
-
 
 .no-info {
 	line-height: 20px;
