--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -46,9 +46,9 @@
 		<div fxLayout="column" fxFlex="50" fxFlex.lt-md="100" fxLayoutGap="20px">
 			<div *appHasRole="['ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE']">
 				<div *ngIf="createUsersIsEnable">
-					<mat-card class="box user-data">
+				 	<mat-card class="box user-data">
 						<mat-card-header>
-							<mat-card-title>
+ 							<mat-card-title>
 								<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px">
 									<mat-icon fontSet="material-icons-outlined">person</mat-icon>
 									<span [translate]="'pacientes.user_data.TITLE'"></span>
@@ -65,12 +65,12 @@
 						</mat-card-header>
 						<mat-divider inset></mat-divider>
 						<mat-card-content>
-							<div *ngIf="userData?.id else noUserInformation" fxLayout="column" fxLayoutGap="10px">
-								<div fxLayout="row" fxLayoutGap="5px">
+						<div *ngIf="userData?.id else noUserInformation" fxLayout="column" fxLayoutGap="10px">
+						<div fxLayout="row" fxLayoutGap="5px">
 									<strong [translate]="'pacientes.user_data.USER_ID'"></strong>
 									<span>{{userData.id}}</span>
 								</div>
-								<div *ngIf="!userData.username" fxLayout="row" fxLayoutGap="10px">
+							 	<div *ngIf="!userData.username" fxLayout="row" fxLayoutGap="10px">
 									<mat-icon color="primary" fontSet="material-icons-outlined">error_outline</mat-icon>
 									<span class="color-primary" [translate]="'pacientes.user_data.PENDING_DATA'"></span>
 								</div>
@@ -124,52 +124,88 @@
 											class="uppercase"></span>
 									</button>
 								</div>
+								<mat-divider inset></mat-divider>
+								<div fxLayout="column" fxLayoutGap="10px">
+									<div content>
+										<app-card-professions [license]="license"
+											[ownProfessionsAndSpecialties]="ownProfessionsAndSpecialties">
+										</app-card-professions>
+									</div>
+									<div content>
+										<button id="button-edit-professions" mat-stroked-button color="primary"
+											(click)="editProfessions()">
+											<span [translate]="'pacientes.user_data.buttons.EDIT_PROFESSIONS'"
+												class="uppercase"></span>
+										</button>
+									</div>
+								</div>
 							</div>
-							<mat-divider inset></mat-divider>
-							<div fxLayout="column" fxLayoutGap="10px">
-								<div content>
-									<ng-container *ngIf="hasAssignedProfessions else noInfo">
-										<div fxLayout="column" fxLayoutGap="10px">
-											<div class="sub-title" fxLayout="column" fxLayoutGap="5px">
-												<strong [translate]="'pacientes.user_data.LICENCE'"></strong>
-												<div>{{license}}</div>
-											</div>
-											<div content>
-												<div fxLayout="row">
-													<div fxFlex="50%">
-														<div>
-															<strong
-																[translate]="'pacientes.user_data.PROFESSION'"></strong>
-															<div id="profession" class="data" fxLayout="row"
-																fxLayoutGap="16px"
-																*ngFor="let profession of showProfessions">
-																<mat-icon color="primary"
-																	fontSet="material-icons-outlined">
-																	medical_services
-																</mat-icon>
-																<span>{{profession}}</span>
-															</div>
-														</div>
-													</div>
-													<div fxFlex="50%">
-														<strong [translate]="'pacientes.user_data.SPECIALTY'"></strong>
-														<div id="specialty" class="data" fxLayout="row"
-															fxLayoutGap="16px"
-															*ngFor="let specialty of showSpecialties">
-															<span>{{specialty}}</span>
-														</div>
-													</div>
-												</div>
+
+						</mat-card-content>
+					</mat-card>
+
+		</div>
+				<div *appHasRole="['ADMINISTRATIVO']">
+					<app-summary-card *ngIf="internmentEpisodeSummary" id="internment_summary_card"
+						[header]="internacionSummary">
+						<mat-card-content>
+							<app-internment-episode-summary
+								[canLoadProbableDischargeDate]="canLoadProbableDischargeDate"
+								[hasEpicrisis]="epicrisisDoc" [internmentEpisode]="internmentEpisodeSummary"
+								[patientId]="patientId" [showDischarge]="showDischarge">
+							</app-internment-episode-summary>
+						</mat-card-content>
+					</app-summary-card>
+					<mat-card class="box" *ngIf="emergencyCareEpisodeSummary" id="emergency-care-episode-summary-card">
+						<mat-card-header>
+							<mat-card-title>
+								<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px">
+									<mat-icon fontSet="material-icons-outlined">local_hospital</mat-icon>
+									<span [translate]="'pacientes.emergency_care_episode_sumamry.TITLE'"></span>
+								</div>
+							</mat-card-title>
+							<ng-container *ngIf="emergencyCareEpisodeSummary?.id">
+								<div fxLayout="row" fxLayoutAlign="center center">
+									<button mat-raised-button color="primary" class="create-user"
+										(click)="goToEmergencyCareEpisode()">
+										<span
+											[translate]="'pacientes.emergency_care_episode_sumamry.buttons.VIEW_EPISODE'"></span>
+									</button>
+								</div>
+							</ng-container>
+						</mat-card-header>
+						<mat-card-content>
+							<div fxLayout="row" fxLayoutAlign="space-between">
+								<div fxLayout="column">
+									<div fxLayout="row" fxLayoutGap="15px">
+										<div fxLayout="column">
+											<div id="triage-chip"
+												[ngStyle]="{'color':emergencyCareEpisodeSummary?.triage?.id === triages.AMARILLO_NIVEL_3 ? 'black' : 'white' }"
+												[style.background-color]="emergencyCareEpisodeSummary?.triage?.color">{{
+												emergencyCareEpisodeSummary?.triage?.name }}
 											</div>
 										</div>
-									</ng-container>
+										<div fxLayout="column" fxLayoutAlign="center center">
+											<span>{{ emergencyCareEpisodeSummary?.type?.description }}</span>
+										</div>
+									</div>
 								</div>
-								<div content>
-									<button id="button-edit-professions" mat-stroked-button color="primary"
-										(click)="editProfessions()">
-										<span [translate]="'pacientes.user_data.buttons.EDIT_PROFESSIONS'"
-											class="uppercase"></span>
-									</button>
+								<div fxLayout="column" fxLayoutGap="15px">
+									<div fxLayout="row" fxLayoutGap="15px">
+										<div fxLayout="column">
+											<span
+												*ngIf="emergencyCareEpisodeSummary?.state.id === episodeStates.EN_ESPERA else enAtencion">
+												{{ emergencyCareEpisodeSummary?.state.description }}
+											</span>
+										</div>
+										<div fxLayout="column">
+											<span> {{ emergencyCareEpisodeSummary?.doctorsOffice?.description }} </span>
+										</div>
+									</div>
+									<ng-template #enAtencion>
+										<span id="episode-state">{{ emergencyCareEpisodeSummary?.state.description |
+											uppercase }}</span>
+									</ng-template>
 								</div>
 							</div>
 						</mat-card-content>
@@ -249,6 +285,10 @@
 
 <ng-template #noInfo>
 	<span class="no-professions" [translate]="'pacientes.user_data.WITHOUT_PROFESSIONS'"></span>
+</ng-template>
+
+<ng-template #doesNotHavePermissions>
+	<span class="no-professions" [translate]="'pacientes.user_data.NOT_HAVE_PERMISSIONS'"></span>
 </ng-template>
 
 <ng-template #doesNotHavePermissions>
