--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -27,14 +27,15 @@ mat-card-header {
 		margin-top: 10px;
 		border-radius: 6px;
 		padding: 4px 15px;
-		font-weight: 700;
+		font-weight: 500;
 		font-size: 14px;
 		line-height: 19px;
 		width: 130px;
 		text-align: center;
 	}
 	.label-internment-episode {
-		background-color: #ffcece;
+		padding-top: 5px;
+		background-color: #FDEDED;
 		color: #EB5757;
 	}
 	.label-emergency-care-episode {
@@ -79,5 +80,20 @@ mat-card-subtitle {
 	.mat-card-subtitle {
 		font-size: 11px;
 	}
+}
+
+.mat-card-patient-image{
+	width: 80px;
+	height: 80px;
+}
+
+.mat-card-patient-name{
+	text-transform: capitalize;
+	max-width: 180px;
+	line-height: 24px;
+}
+
+.interment-episode{
+	padding-top: 5px;
 }
 
