--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.scss
@@ -11,8 +11,5 @@
 }
 
 .filter-button {
-	display: inline-flex;
-	vertical-align: middle;
-	margin: 0.5rem;
-	padding:0.2rem;
+	padding-bottom: 1.34em;
 }
