tg-6509 Fijar encabezado de la tabla de turnos

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
@@ -126,7 +126,7 @@
 				</ng-template>
 
 				<ng-template #headerTemplate let-days="days" let-locale="locale">
-					<div class="cal-day-headers">
+					<div class="cal-day-headers fixed-header">
 						<div class="cal-header" *ngFor="let day of days">
 							<strong>
 								{{ day.date | calendarDate:'weekViewColumnHeader':locale | titlecase}}
