--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/ambulatoria-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/ambulatoria-mixins.scss
@@ -1,7 +1,7 @@
 @import "./components/vacunas/vacunas.component.scss-theme.scss";
 @import "./components/datos-antropometricos-nueva-consulta/datos-antropometricos-nueva-consulta-theme.scss";
 @import "./components/factores-de-riesgo-nueva-consulta/factores-de-riesgo-nueva-consulta-theme.scss";
-@import "./components/ordenes/item-prescripciones/item-prescripciones.component.scss-theme.scss";
+@import "components/item-prescripciones/item-prescripciones.component.scss-theme.scss";
 
 @mixin ambulatoria-mixins($theme) {
 	@include app-item-prescripciones($theme);
