tg-6535 [P1] Error al generar pase de cama o alta administrativa desde hc

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -45,7 +45,7 @@
 							(openInNew)="openDialog()">
 							<mat-card-content>
 								<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary"
-									[canLoadProbableDischargeDate]="canLoadProbableDischargeDate" [hasEpicrisis]="epicrisisDoc?.confirmed" [showDischarge]="showDischarge">
+									[canLoadProbableDischargeDate]="canLoadProbableDischargeDate" [patientId]="patientId" [hasEpicrisis]="epicrisisDoc?.confirmed" [showDischarge]="showDischarge">
 								</app-internment-episode-summary>
 							</mat-card-content>
 						</app-summary-card>
