tg-6510 Modificar el límite horario de la tabla utilizando scroll

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
@@ -95,7 +95,7 @@
 					<mat-form-field appearance="outline">
 						<mat-select id="appointmentDuration" name="appointmentDuration"
 							formControlName="appointmentDuration" placeholder="{{'pacientes.form.SELECT' | translate}}"
-							(selectionChange)="agendaHorarioService.setAppointmentDuration(form.getRawValue().appointmentDuration)">
+							(selectionChange)="scrollToDefaultStartingHour()">
 							<mat-option *ngFor="let appointmentDuration of appointmentDurations"
 								[value]="appointmentDuration.id">
 								{{appointmentDuration.description}}
