--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.html
@@ -1,7 +1,13 @@
 <app-content width="full">
 	<app-summary-card id="internment-indications"	[header]="internmentIndication"
 				  [editable]="false"
-				  [canEdit]="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA', 'PROFESIONAL_DE_SALUD', 'ENFERMERO']">
+				  [canEdit]="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA', 'PROFESIONAL_DE_SALUD', 'ENFERMERO']"
+				  [menu]="!epicrisisConfirmed" [matMenu]="menu">
+		<mat-menu #menu="matMenu">
+		<button mat-menu-item (click)="openDietDialog()">
+		  <span>{{'ambulatoria.dialog-title.DIET' | translate }}</span>
+		</button>
+		</mat-menu>
 		<div class="content" fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="10px">
 			<button mat-icon-button (click)="viewAnotherDay(-1)" [disabled]="this.currentViewIsEntryDate">
 				<mat-icon [ngClass]="{ 'disabled': this.currentViewIsEntryDate, 'color-primary': !this.currentViewIsEntryDate}">chevron_left</mat-icon>
