--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.scss
@@ -1,3 +1,16 @@
 div {
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.hour_selector{
+	width: 75px;
+}
+
+.detail_icon{
+	color: #A8A8A8;
+}
+
+.day_text{
+	font-weight: bolder;
+	color: #2C2C2C;
+}
