tg-6598 Ajustes estéticos del diálogo

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.scss
@@ -2,8 +2,13 @@ div {
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+mat-form-field {
+    width:100%;
+}
+
 .hour_selector{
 	width: 75px;
+	margin-top: 20px;
 }
 
 .detail_icon{
@@ -13,4 +18,12 @@ div {
 .day_text{
 	font-weight: bolder;
 	color: #2C2C2C;
+}
+
+.attention_dialog{
+	width: 25vw;
+}
+
+.attention_dialog_title{
+	margin-top: -10%;
 }
