--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
@@ -1,85 +1,87 @@
+<div class="attention_dialog">
 
-<div mat-dialog-title *ngIf="!data.isEdit else edit">
-	<div class="mat-h2" translate="turnos.agenda-setup.dialog.TITLE"></div>
-</div>
-<ng-template #edit>
 	<div align="end">
-		<button mat-icon-button color="warn" (click)="removeAttention()">
-			<mat-icon>delete_outline</mat-icon>
+		<button id="cancel_button" name="cancel_button" mat-icon-button (click)="closeDialog()">
+			<mat-icon>close</mat-icon>
 		</button>
 	</div>
 
-	<div mat-dialog-title >
-		<div class="mat-h2" translate="turnos.agenda-setup.dialog.EDIT"></div>
+	<div class="attention_dialog_title" mat-dialog-title *ngIf="!data.isEdit else edit">
+		<div class="mat-h2" translate="turnos.agenda-setup.dialog.TITLE"></div>
 	</div>
-</ng-template>
+	<ng-template #edit>
+		<div class="attention_dialog_title" mat-dialog-title>
+			<div class="mat-h2" translate="turnos.agenda-setup.dialog.EDIT"></div>
+		</div>
+	</ng-template>
 
 
-<form [formGroup]="form" (ngSubmit)="submit()">
+	<form [formGroup]="form" (ngSubmit)="submit()">
 
-	<div fxLayout="column" fxLayoutAlign="start start">
-		<div fxLayout="row" fxLayoutAlign="space-around center">
-			<mat-icon class="detail_icon">event</mat-icon>
-			<span class="day_text">Todos los {{ data.start | viewFullDayOfWeek }}</span>
+		<div fxLayout="column" fxLayoutAlign="center none">
+			<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
+				<mat-icon class="detail_icon">event</mat-icon>
+				<span class="day_text">Todos los {{ data.start | date:'EEEE' }}</span>
+			</div>
+
+			<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
+				<mat-icon class="detail_icon">access_time</mat-icon>
+				<mat-form-field appearance="outline" class="hour_selector">
+					<mat-select formControlName="startingHour">
+						<mat-option [value]="possibleScheduleHour" *ngFor="let possibleScheduleHour of possibleStartingScheduleHours"
+							(click)="filterAppointmentEndingHours()">
+							{{ possibleScheduleHour | date:'shortTime' }}
+						</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<span>hs. a</span>
+				<mat-form-field appearance="outline" class="hour_selector">
+					<mat-select formControlName="endingHour">
+						<mat-option [value]="possibleScheduleHour" *ngFor="let possibleScheduleHour of possibleEndingScheduleHours">
+							{{ possibleScheduleHour | date:'shortTime' }}
+						</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<span>hs.</span>
+			</div>
 		</div>
 
-		<div fxLayout="row" fxLayoutAlign="space-evenly center">
-			<mat-icon class="detail_icon">access_time</mat-icon>
-			<mat-form-field appearance="outline" class="hour_selector">
-				<mat-select [value]="selectedStartingHour | viewFullHour">
-					<mat-option [value]="possibleScheduleHour | viewFullHour" *ngFor="let possibleScheduleHour of possibleStartingScheduleHours" (click)="filterAppointmentEndingHours(possibleScheduleHour)">
-						{{ possibleScheduleHour | viewFullHour }}
-					</mat-option>
-				</mat-select>
-			</mat-form-field>
-			<span>hs. a</span>
-			<mat-form-field appearance="outline" class="hour_selector">
-				<mat-select [value]="selectedEndingHour | viewFullHour">
-					<mat-option [value]="possibleScheduleHour | viewFullHour" *ngFor="let possibleScheduleHour of possibleEndingScheduleHours" (click)="selectedEndingHour = possibleScheduleHour">
-						{{ possibleScheduleHour | viewFullHour }}
-					</mat-option>
-				</mat-select>
-			</mat-form-field>
-			<span>hs.</span>
-		</div>
-	</div>
+		<div fxLayout="column">
+			<div>
+				<mat-form-field appearance="outline">
+					<mat-label [translate]="'turnos.agenda-setup.MEDICAL_ATTENTION_TYPE'"></mat-label>
+					<mat-select formControlName="medicalAttentionType" name="medical_attention_type"
+						id="medical_attention_type" (selectionChange)="onSelectionChanged()">
+						<mat-option *ngFor="let medicalAttentionType of medicalAttentionTypes"
+							[value]="medicalAttentionType">
+							{{ medicalAttentionType.description}}
+						</mat-option>
+					</mat-select>
+					<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+				</mat-form-field>
+			</div>
 
-	<div fxLayout="column">
-		<div>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'turnos.agenda-setup.MEDICAL_ATTENTION_TYPE'"></mat-label>
-				<mat-select formControlName="medicalAttentionType" name="medical_attention_type" id="medical_attention_type"
-					(selectionChange)="onSelectionChanged()">
-					<mat-option *ngFor="let medicalAttentionType of medicalAttentionTypes"
-						[value]="medicalAttentionType">
-						{{ medicalAttentionType.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-			</mat-form-field>
 		</div>
 
-	</div>
-
-	<div fxLayout="column" *ngIf="form?.value?.medicalAttentionType?.description != SPONTANEOUS ">
-		<div translate="turnos.agenda-setup.OVERTURN_COUNT"></div>
-		<div>
-			<mat-form-field floatLabel="never" appearance="outline">
-				<input id="overturnCount" name="overturnCount" formControlName="overturnCount" matInput placeholder="0"
-					type="number">
-			</mat-form-field>
+		<div fxLayout="column" *ngIf="form?.value?.medicalAttentionType?.description != SPONTANEOUS ">
+			<div translate="turnos.agenda-setup.OVERTURN_COUNT"></div>
+			<div>
+				<mat-form-field floatLabel="never" appearance="outline">
+					<input id="overturnCount" name="overturnCount" formControlName="overturnCount" matInput
+						placeholder="0" type="number">
+				</mat-form-field>
+			</div>
 		</div>
-	</div>
 
 
-	<mat-dialog-actions align="end">
-		<button id="cancel_button" name="cancel_button" mat-stroked-button color="primary" mat-dialog-close
-			(click)="closeDialog()">
-			<span [translate]="'buttons.CANCEL'"></span>
-		</button>
-		<button id="confirm_button" name="confirm_button" mat-raised-button color="primary">
-			<span [translate]="'buttons.CONFIRM'"></span>
-		</button>
-	</mat-dialog-actions>
+		<mat-dialog-actions align="end">
+			<button *ngIf="data.isEdit" mat-flat-button mat-dialog-close color="warn" (click)="removeAttention()">
+				<span>Eliminar atención</span>
+			</button>
+			<button id="confirm_button" name="confirm_button" mat-raised-button color="primary">
+				<span [translate]="'buttons.CONFIRM'"></span>
+			</button>
+		</mat-dialog-actions>
 
-</form>
+	</form>
+</div>
