tg-6534 [FE] Crea card de indicaciones de internación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -217,6 +217,9 @@
 							<span>{{ 'ambulatoria.paciente.indications.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
+							<div *ngIf="hasInternmentEpisodeInThisInstitution">
+								<app-internment-indications-card></app-internment-indications-card>
+							</div>
 							<app-card-medicaciones [patientId]="patientId" [medicamentStatus]="medicamentStatus$ | async" ></app-card-medicaciones>
 						</ng-template>
 					</mat-tab>
