--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.html
@@ -2,5 +2,31 @@
 	<app-summary-card id="internment-indications"	[header]="internmentIndication"
 				  [editable]="true"
 				  [canEdit]="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA', 'PROFESIONAL_DE_SALUD', 'ENFERMERO']">
+		<div class="content" fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="10px">
+			<button mat-icon-button (click)="viewAnotherDay(-1)" [disabled]="this.currentViewIsEntryDate">
+				<mat-icon [ngClass]="{ 'disabled': this.currentViewIsEntryDate, 'color-primary': !this.currentViewIsEntryDate}">chevron_left</mat-icon>
+			</button>
+			<div *ngIf="isToday || isYesterday || isTomorrow">
+				<ng-container *ngIf="isToday; else yesterday">
+					<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.TODAY'"></span>
+				</ng-container>
+			</div>
+			<div *ngIf="viewDay$ | async as viewDay" fxLayout="row" fxLayoutGap="4px" fxLayoutAlign="left center" class="actual-date">
+				<span>{{ viewDay.nameDay }}</span>
+				<span>{{ viewDay.numberDay }}</span>
+				<span>{{ viewDay.month }}</span>
+			</div>
+			<button mat-icon-button (click)="viewAnotherDay(1)">
+				<mat-icon class="color-primary">chevron_right</mat-icon>
+			</button>
+		</div>
 	</app-summary-card>
 </app-content>
+<ng-template #yesterday>
+	<ng-container *ngIf="isYesterday else tomorrow">
+		<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.YESTERDAY'"></span>
+	</ng-container>
+</ng-template>
+<ng-template #tomorrow>
+	<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.TOMORROW'"></span>
+</ng-template>
