tg-6554 [FE] Agrega las secciones de Dieta, Planes parenterales, farmacos y otras indicaciones

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.scss
@@ -19,3 +19,32 @@
 .disabled {
 	color: rgba(0, 0, 0, 0.38);
 }
+
+.title {
+	@include general-font;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 18.75px;
+}
+
+.parenteral-plans {
+	width: 25%;
+}
+
+.other-indications {
+	width: 20%;
+}
+.mat-divider {
+	position: relative;
+}
+
+.section {
+	padding-bottom: 30px;
+}
+
+.no-data {
+	font-weight: 400;
+	font-size: 16px;
+	color: #a8a8a8;
+	padding-bottom: 20px;
+}
