--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/internment-indications-card/internment-indications-card.component.html
@@ -20,8 +20,46 @@
 				<mat-icon class="color-primary">chevron_right</mat-icon>
 			</button>
 		</div>
+		<div class="content" fxLayout="column" fxLayoutGap="20px">
+			<div id="diet">
+				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
+					<mat-icon class="color-primary">local_dining</mat-icon>
+					<span class="color-primary title">{{ 'ambulatoria.paciente.indications.internment-card.sections.DIET' | translate | uppercase }}</span>
+					<mat-divider></mat-divider>
+				</div>
+				<div fxLayout="column" *ngTemplateOutlet="noDiet"></div>
+			</div>
+
+			<div id="parenteral_plans">
+				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
+					<mat-icon class="color-primary" svgIcon="parenteral_plans"></mat-icon>
+					<span class="color-primary title parenteral-plans">{{ 'ambulatoria.paciente.indications.internment-card.sections.PARENTERAL_PLAN'| translate | uppercase }}</span>
+					<mat-divider></mat-divider>
+				</div>
+				<div fxLayout="column" *ngTemplateOutlet="noParenteralPlan"></div>
+			</div>
+
+			<div id="pharmacos">
+				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
+					<mat-icon class="color-primary" svgIcon="pharmaco"></mat-icon>
+					<span class="color-primary title">{{'ambulatoria.paciente.indications.internment-card.sections.PHARMACO'| translate | uppercase }}</span>
+					<mat-divider></mat-divider>
+				</div>
+				<div fxLayout="row" *ngTemplateOutlet="noPharmaco"></div>
+			</div>
+
+			<div id="other_indications">
+				<div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center"  class="section">
+					<mat-icon class="color-primary">assignment_late</mat-icon>
+					<span class="color-primary title other-indications">{{'ambulatoria.paciente.indications.internment-card.sections.OTHER_INDICATION'| translate | uppercase }}</span>
+					<mat-divider></mat-divider>
+				</div>
+				<div fxLayout="column" *ngTemplateOutlet="noOtherIndicaction"></div>
+			</div>
+		</div>
 	</app-summary-card>
 </app-content>
+
 <ng-template #yesterday>
 	<ng-container *ngIf="isYesterday else tomorrow">
 		<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.YESTERDAY'"></span>
@@ -29,4 +67,24 @@
 </ng-template>
 <ng-template #tomorrow>
 	<span class="actual-date" [translate]="'ambulatoria.paciente.indications.internment-card.TOMORROW'"></span>
+</ng-template>
+<ng-template #noDiet>
+	<div class="no-data mat-typography">
+		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.DIET'"></span>
+	</div>
+</ng-template>
+<ng-template #noParenteralPlan>
+	<div class="no-data mat-typography">
+		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.PARENTERAL_PLAN'"></span>
+	</div>
+</ng-template>
+<ng-template #noPharmaco>
+	<div class="no-data mat-typography">
+		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.PHARMACO'"></span>
+	</div>
+</ng-template>
+<ng-template #noOtherIndicaction>
+	<div class="no-data mat-typography">
+		<span [translate]="'ambulatoria.paciente.indications.internment-card.sections.no-data.OTHER_INDICATION'"></span>
+	</div>
 </ng-template>
