--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
@@ -26,9 +26,8 @@
 			[datosAntropometricosNuevaConsultaService]="datosAntropometricosNuevaConsultaService">
 		</app-datos-antropometricos-nueva-consulta>
 
-		<app-factores-de-riesgo-nueva-consulta
-			[factoresDeRiesgoNuevaConsultaService]="factoresDeRiesgoNuevaConsultaService">
-		</app-factores-de-riesgo-nueva-consulta>
+		<app-factores-de-riesgo-form [factoresDeRiesgoNuevaConsultaService]="factoresDeRiesgoNuevaConsultaService">
+		</app-factores-de-riesgo-form>
 
 		<div id="problem">
 			<div class="margin-bottom">
